correction de la correction w3c, réalignement sous le mac en cas d'écran moins large

--- a/css/little_screen.css
+++ b/css/little_screen.css
@@ -1,3 +1,10 @@
+#services div:nth-child(4) {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
 #map
 {
     display: flex;
